added font awesome

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Loogart is a Montreal-based visual design studio that specializes in illustration, brand identity, small-scale animation and web design.">
+    <meta name="author" content="Chris of Loogart">
     <link rel="icon" href="../../favicon.ico">
 
     <title>Illustration, brand identity and web design |Loogart</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link href="css/zoom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
