Added footer section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="container">
                 <h1 class="hidden">Loogart: Montreal visual design studio for illustration, brand identity and web design</h1>
                 <h2>Loogart is a Montreal-based visual design studio that specializes in illustration, brand identity, small-scale animation and web design.</h2>
-                <p>
+                <p class="cta-jumbotron">
                     <a class="btn btn-lg btn-pink" href="./" role="button">email us</a>
                 </p>
             </div>
@@ -115,19 +115,46 @@
                             <div class="inner portfolio-starbucks"></div>
                             <div class="portfolio-text top no-gradient text-dark">
                                 <span class="logo starbucks-logo"></span>
-                                <span class="logo-text">
+                        <span class="logo-text">
                                 <h5 class="text-green-starbucks">Starbucks</h5>
                                 <p>Illustration created originally for my best friend’s living room. He of course has it hanging in his living room.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
                 </div>
+                </span>
+                </a>
             </div>
-        </section>
+    </div>
+    </section>
 
     </div>
     <!-- /container -->
+
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h5>Hire Loogart now.</h5>
+                    <p>We create a visual language to help communicate your ideas to your clients. We do this through brand identity direction, illustration, animation, web design.
+                        <p>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Reach us.</h5>
+                    <ul class="list-unstyled">
+                        <li>Facebook</li>
+                        <li>Instagram</li>
+                        <li>Email us</li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Loog a day</h5>
+                    <p>Be the first to see the next Loog of the Day via email. 
+                        <p>
+                        
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- Bootstrap core JavaScript
