added structure footer, fixed mobile menu button

--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@
                             <div class="portfolio-text top no-gradient text-dark">
                                 <span class="logo starbucks-logo"></span>
                         <span class="logo-text">
-                                <h5 class="text-green-starbucks">Starbucks</h5>
-                                <p>Illustration created originally for my best friend’s living room. He of course has it hanging in his living room.</p>
+                                    <h5 class="text-green-starbucks">Starbucks</h5>
+                                    <p>Illustration created originally for my best friend’s living room. He of course has it hanging in his living room.</p>
                                 </span>
                 </div>
+
                 </span>
+
                 </a>
             </div>
     </div>
@@ -133,7 +135,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     <h5>Hire Loogart now.</h5>
                     <p>We create a visual language to help communicate your ideas to your clients. We do this through brand identity direction, illustration, animation, web design.
                         <p>
@@ -146,16 +148,25 @@
                         <li>Email us</li>
                     </ul>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-5">
                     <h5>Loog a day</h5>
-                    <p>Be the first to see the next Loog of the Day via email. 
+                    <p>Be the first to see the next Loog of the Day via email.
                         <p>
-                        
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search for...">
+                                <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+      </span>
+                            </div>
+                            <!-- /input-group -->
+
                 </div>
             </div>
         </div>
     </footer>
-
+    <div class="row lower-footer">
+        <h6>© 2017 Loogart</h6>
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
