fixed footer overflow issue

--- a/index.html
+++ b/index.html
@@ -178,21 +178,18 @@
                 </div>
                 <div class="col-sm-5">
                     <h5>Loog a day</h5>
-                    <p>Be the first to see the next Loog of the Day via email.
-                        <p>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search for...">
-                                <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
-      </span>
-                            </div>
-                            <!-- /input-group -->
-
+                    <p>Be the first to see the next Loog of the Day via email.</p>
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search for...">
+                        <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">Go!</button>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
-    <div class="row lower-footer">
+    <div class="lower-footer">
         <h6>© 2017 Loogart</h6>
     </div>
 
