added more portfolio items

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="./">about</a></li>
                     <li><a href="./">shop</a></li>
-                    <li><a href="./">ig</a></li>
-                    <li><a href="./">fb</a></li>
+                    <li><a href="https://www.instagram.com/loogart/">ig</a></li>
+                    <li><a href="https://www.facebook.com/LoogArt/">fb</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -179,7 +179,36 @@
                     </a>
                 </div>
             </div>            
-            
+            <div class="row">
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <span class="outer">
+                            <div class="inner portfolio-travel-smart"></div>
+                            <div class="portfolio-text bottom text-light">
+                                <div class="travel-smart-logo"></div>
+                                <span class="logo pull-left canada-logo"></span>
+                                <span class="pull-left">
+                                    <h5>Travel Smart</h5>
+                                    <p>Visual and user experience design for Global Affairs Canada’s Travel Smart app.</p>
+                                </span>
+                            </div>
+                        </span>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <span class="outer">
+                            <div class="inner portfolio-upa"></div>
+                            <div class="portfolio-text top no-gradient text-light">
+                                <span class="logo pull-left upa-logo"></span>
+                                <span class="logo-text pull-right">
+                                    <p>Illustration made for the UPA which was made into a TV commercial.</p>
+                                </span>
+                            </div>
+                        </span>
+                    </a>
+                </div>
+            </div>             
             
         </section>
 
