--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                             <div class="inner portfolio-ets"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
                                 <span class="logo pull-left ets-logo"></span>
-                                <span class="logo-text pull-right no-title">
+                                <span class="logo-text pull-right">
+                                    <h5 class="text-red-ets">ÉTS Montréal</h5>
                                     <p>Illustration designed for the Ecole de Technologie Superieure in Montreal.</p>
                                 </span>
                             </div>
@@ -144,6 +145,7 @@
                             <div class="inner portfolio-car2go"></div>
                             <div class="portfolio-text top no-gradient text-light">
                                 <span class="logo-text pull-left">
+                                    <h5>car2go Montréal</h5>
                                     <p>Illustration created for car2go Montreal produced by Station 16.</p>
                                 </span>
                             </div>
@@ -158,7 +160,8 @@
                             <div class="inner portfolio-swiffer"></div>
                             <div class="portfolio-text bottom text-light">
                                 <span class="logo pull-left swiffer-logo"></span>
-                                <span class="logo-text pull-right no-title">
+                                <span class="logo-text pull-right">
+                                    <h5>Swiffer</h5>
                                     <p>Montreal Moving Day social media creative.</p>
                                 </span>
                             </div>
@@ -172,6 +175,7 @@
                             <div class="portfolio-text top no-gradient text-light">
                                 <span class="logo pull-left upa-logo"></span>
                                 <span class="logo-text pull-right">
+                                    <h5>L'Union des producteurs agricoles</h5>
                                     <p>Illustration made for the UPA which was made into a TV commercial.</p>
                                 </span>
                             </div>
@@ -198,11 +202,12 @@
                 <div class="col-sm-6">
                     <a href="#!">
                         <span class="outer">
-                            <div class="inner portfolio-upa"></div>
-                            <div class="portfolio-text top no-gradient text-light">
-                                <span class="logo pull-left upa-logo"></span>
-                                <span class="logo-text pull-right">
-                                    <p>Illustration made for the UPA which was made into a TV commercial.</p>
+                            <div class="inner portfolio-suite88"></div>
+                            <div class="portfolio-text bottom no-gradient text-dark">
+                                <span class="logo pull-right suite88-logo"></span>
+                                <span class="logo-text pull-left">
+                                    <h5>Suite 88</h5>
+                                    <p>Illustration designed for Suite 88 limited edition chocolate packaging.</p>
                                 </span>
                             </div>
                         </span>
