added transition to input forms

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Loogart is a Montreal-based visual design studio that specializes in illustration, brand identity, small-scale animation and web design.">
-    <meta name="author" content="Chris of Loogart">
+    <meta name="author" content="Chris Soueidan of Loogart">
     <link rel="icon" href="../../favicon.ico">
 
     <title>Illustration, brand identity and web design |Loogart</title>
@@ -316,7 +316,7 @@
                     <h5>Loog a day</h5>
                     <p>Be the first to see the next Loog of the Day via email.</p>
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Your email...">
+                        <input type="text" class="form-control" placeholder="Your email">
                         <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Subscribe</button>
                         </span>
