changed link colors and added links to sub pages on home page

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                         <a href="#!"><img class="carousel-loogs" src=""></a>
                         <a href="#!"><img class="carousel-loogs" src=""></a>
                     </div>
+                    <h5><a href="#!">View all Loogs</a></h5>
                 </div>
             </div>
         </section>
@@ -265,6 +266,7 @@
                         <a href="#!"><img class="carousel-brands" src=""></a>
                         <a href="#!"><img class="carousel-brands" src=""></a>
                     </div>
+                    <h5><a href="#!">View all brand projects</a></h5>
                 </div>
             </div>
         </section>        
@@ -288,6 +290,7 @@
                         <a href="#!"><img class="carousel-web-design" src=""></a>
                         <a href="#!"><img class="carousel-web-design" src=""></a>
                     </div>
+                    <h5><a href="#!">View all web projects</a></h5>
                 </div>
             </div>
         </section>          
