updated css for form-control dark view

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <a href="#!"><img class="carousel-web-design" src=""></a>
                         <a href="#!"><img class="carousel-web-design" src=""></a>
                     </div>
-                    <h5><a href="#!">View all web projects</a></h5>
+                    <h5><a href="#!">View all web projectsr</a></h5>
                 </div>
             </div>
         </section>          
@@ -319,7 +319,7 @@
                     <h5>Loog a day</h5>
                     <p>Be the first to see the next Loog of the Day via email.</p>
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Your email">
+                        <input type="text" class="form-control on-dark" placeholder="Your email">
                         <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Subscribe</button>
                         </span>
