added link arrow styling to portfolio links

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <a href="#!"><img class="carousel-web-design" src=""></a>
                         <a href="#!"><img class="carousel-web-design" src=""></a>
                     </div>
-                    <h5><a href="#!">View all web projectsr</a></h5>
+                    <h5><a href="#!">View all web projects</a></h5>
                 </div>
             </div>
         </section>          
