--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Loogart is a Montreal-based visual design studio that specializes in illustration, brand identity, small-scale animation and web design.">
+    <meta name="description" content="Loogart is a visual design studio that specializes in illustration, brand identity, small-scale animation and web design. Our work is featured in Montreal, Toronto, Ottawa and Gatineau.">
     <meta name="author" content="Chris Soueidan of Loogart">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Illustration, brand identity and web design |Loogart</title>
+    <title>Illustration, brand identity and web design | Loogart</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -37,12 +37,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Loogart.</a>
+                <a class="navbar-brand" href="./">Loogart.</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="./">about</a></li>
+                    <li><a href="about.html">about</a></li>
                     <li><a href="./">shop</a></li>
                     <li><a href="https://www.instagram.com/loogart/">ig</a></li>
                     <li><a href="https://www.facebook.com/LoogArt/">fb</a></li>
@@ -335,10 +335,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
-    </script>
+    <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/zoom.min.js"></script>
     <script src="js/loogart.js"></script>
