minor css updates, padding body from 130 to 99, footer links created for both pages, added active on hover portfolio, added maximum-scale=1.0, user-scalable=0 to avoid zoom

--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
                 <div class="col-sm-3">
                     <h5>Reach us.</h5>
                     <ul class="list-unstyled">
-                        <li>Facebook</li>
-                        <li>Instagram</li>
-                        <li>Email us</li>
+                        <li><a href="http://facebook.com/loogart">Facebook</a></li>
+                        <li><a href="http://instagram.com/loogart">Instagram</a></li>
+                        <li><a href="#!">Email us</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
