created portfolio content page for starbucks (tester)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/font-awesome.css">
+    <link href="css/font-awesome.css" rel="stylesheet" >
     <link href="css/zoom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -37,7 +37,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./">Loogart.</a>
+                <a class="navbar-brand" href="index.html">Loogart.</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
@@ -101,10 +101,10 @@
             <div class="row">
                 <div class="container">
                     <h3>Selected projects</h3>
-                    <h4>A collection of pop-culture and iconic people created by Loogart on an almost daily basis.</h4>
+                    <h4>A selection of awesome design projects for different clients. These projects include illustration, animation, app visual design, packaging, web graphics and print.</h4>
                 </div>
                 <div class="col-sm-6">
-                    <a href="#!">
+                    <a href="projects/montreal-cityline-illustration.html">
                         <span class="outer">
                             <div class="inner portfolio-montreal"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
@@ -115,7 +115,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6">
-                    <a href="#!">
+                    <a href="projects/starbucks-cityscape-illustration.html">
                         <span class="outer">
                             <div class="inner portfolio-starbucks"></div>
                             <div class="portfolio-text top no-gradient text-dark">
