--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/font-awesome.css">
+    <link href="css/font-awesome.css" rel="stylesheet" >
     <link href="css/zoom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -37,7 +37,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./">Loogart.</a>
+                <a class="navbar-brand" href="index.html">Loogart.</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
