fixed responsive for 1 image

--- a/projects/starbucks-cityscape-illustration.html
+++ b/projects/starbucks-cityscape-illustration.html
@@ -86,7 +86,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
                 </div>
                 <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" style="height:300px;" src="../img/starbucks-coffee-beans-photography.jpg" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/starbucks-coffee-beans-photography.jpg" data-action="zoom">
                     <h3>Graphic texture behind illustration</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
                 </div>
