--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
                     <h3>#LoogADay project</h3>
                     <h4>A collection of pop-culture and iconic people created by Loogart on an almost daily basis.</h4>
                     <div class="scroll">
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-elvis-presley.gif"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-ronald-mcdonald.gif"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-colonel-sanders-kfc.gif"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-mr-bean.gif"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-ice-cube-nwa.gif"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-ironman.gif"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-pug.jpg"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-pk-subban.gif"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-bruno-mars.gif"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-snoop-dogg.jpg"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-joker.jpg"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-harry-potter.jpg"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-whoopi.jpg"></a>
-                        <a href="#!"><img class="carousel-loogs" src="img/loogs/loog-spiderman.gif"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-elvis-presley.gif" alt="Animated portrait of Elvis Presley by Loogart" title="Elvis presley"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-ronald-mcdonald.gif" alt="Animated portrait of Ronald McDonalds by Loogart" title="Ronald McDonald"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-colonel-sanders-kfc.gif" alt="Animated portrait of KFC's Colonel Sanders by Loogart" title="Colonel Sanders"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-mr-bean.gif" alt="Animated portrait of comedian Mr. Bean by Loogart" title="Mr. Bean"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-ice-cube-nwa.gif" alt="Animated portrait of Hip Hop Rap artist Ice Cube by Loogart" title="Ice Cube"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-ironman.gif" alt="Animated portrait of Ironman by Loogart" title="Ironman"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-pug.jpg" alt="Portrait of a cute pug by Loogart" title="Cute pug"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-pk-subban.gif" alt="Animated portrait of NHL's PK Subban by Loogart" title="PK Subban"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-bruno-mars.gif" alt="Animated portrait of pop singer Bruno Mars by Loogart" title="Bruno Mars"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-snoop-dogg.jpg" alt="Portrait of the Godfather of Rap Snoop Dogg by Loogart" title="Snoop Dogg"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-joker.jpg" alt="Portrait of Heath Ledger's Joker in Batman by Loogart" title="The Joker"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-harry-potter.jpg" alt="Portrait of Harry Potter by Loogart" title="Harry Potter"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-whoopi.jpg" alt="portrait actress Whoopi Goldberg by Loogart" title="Whoopi Goldberg"></a>
+                        <a href="portraits-loog-a-day.html"><img class="carousel-loogs" src="img/loogs/loog-spiderman.gif" alt="Animated portrait of Spiderman by Loogart" title="Spiderman"></a>
                     </div>
-                    <h5><a href="#!">View all Loogs</a></h5>
+                    <h5><a href="portraits-loog-a-day.html">View all Loogs</a></h5>
                 </div>
             </div>
         </section>
@@ -100,7 +100,7 @@
 
             <div class="row">
                 <div class="container">
-                    <h3>Selected projects</h3>
+                    <h3 id="selectedProjects">Selected projects</h3>
                     <h4>A selection of awesome design projects for different clients. These projects include illustration, animation, app visual design, packaging, web graphics and print.</h4>
                 </div>
                 <div class="col-sm-6">
