--- a/projects/starbucks-cityscape-illustration.html
+++ b/projects/starbucks-cityscape-illustration.html
@@ -42,7 +42,7 @@
             <div id="navbar" class="navbar-collapse collapse">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="../about.html">about</a></li>
                     <li><a href="./">shop</a></li>
                     <li><a href="https://www.instagram.com/loogart/">ig</a></li>
                     <li><a href="https://www.facebook.com/LoogArt/">fb</a></li>
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="container">
                 <p class="cta-back">
-                    <a href="../index.html" role="button">Back to projects</a>
+                    <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
                 <h1>Starbucks Opening Stores by Loogart</h1>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
