--- a/about.html
+++ b/about.html
@@ -14,10 +14,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/font-awesome.css" rel="stylesheet" >
+    <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/zoom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -53,9 +52,9 @@
     </nav>
 
 
-    <!-- Jumbotron section -->    
+    <!-- Jumbotron section -->
     <section class="jumbotron-about">
-            <h1 class="hidden">About Loogart: Chris Soueidan is a Montreal visual designer.</h1>
+        <h1 class="hidden">About Loogart: Chris Soueidan is a Montreal visual designer.</h1>
     </section>
 
     <!-- Pink Section section -->
@@ -135,14 +134,24 @@
                     </ul>
                 </div>
                 <div class="col-sm-4">
-                    <h5>Loog a day</h5>
-                    <p>Be the first to see the next Loog of the Day via email.</p>
-                    <div class="input-group">
-                        <input type="text" class="form-control on-dark" placeholder="Your email">
-                        <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">Subscribe</button>
-                        </span>
-                    </div>
+                    <!-- Begin MailChimp Signup Form -->
+                    <form action="//loogart.us7.list-manage.com/subscribe/post?u=318cbb07c865a88e681d7e59d&amp;id=e18344cbf9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <h5>Loog a day</h5>
+                            <p>Be the first to see the next Loog of the Day via email.</p>
+                            <div class="input-group">
+                                <input class="form-control on-dark" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                    <input type="text" name="b_318cbb07c865a88e681d7e59d_e18344cbf9" tabindex="-1" value="">
+                                </div>
+                                <span class="input-group-btn">
+                                    <!--<button class="btn btn-default" type="button">Subscribe</button>-->
+                                    <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">Subscribe</button>
+                                </span>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
