--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/font-awesome.css" rel="stylesheet" >
+    <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/zoom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -120,184 +119,184 @@
                             <div class="inner portfolio-starbucks"></div>
                             <div class="portfolio-text top no-gradient text-dark">
                                 <span class="logo pull-left starbucks-logo"></span>
-                                <span class="logo-text pull-right">
+                        <span class="logo-text pull-right">
                                     <h5 class="text-green-starbucks">Starbucks</h5>
                                     <p>Illustration created originally for my best friend’s living room. He of course has it hanging in his living room.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
                 </div>
+                </span>
+                </a>
             </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <a href="#!">
-                        <span class="outer">
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <a href="#!">
+                <span class="outer">
                             <div class="inner portfolio-ets"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
                                 <span class="logo pull-left ets-logo"></span>
-                                <span class="logo-text pull-right">
+                <span class="logo-text pull-right">
                                     <h5 class="text-red-ets">ÉTS</h5>
                                     <p>Illustration designed for the Ecole de Technologie Superieure in Montreal.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-sm-6">
-                    <a href="#!">
-                        <span class="outer">
+        </div>
+        </span>
+        </a>
+    </div>
+    <div class="col-sm-6">
+        <a href="#!">
+            <span class="outer">
                             <div class="inner portfolio-car2go"></div>
                             <div class="portfolio-text top no-gradient text-light">
                                 <span class="logo-text pull-left">
                                     <h5>car2go</h5>
                                     <p>Illustration created for car2go Montreal produced by Station 16.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <a href="#!">
-                        <span class="outer">
+    </div>
+    </span>
+    </a>
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <a href="#!">
+                <span class="outer">
                             <div class="inner portfolio-swiffer"></div>
                             <div class="portfolio-text bottom text-light">
                                 <span class="logo pull-left swiffer-logo"></span>
-                                <span class="logo-text pull-right">
+                <span class="logo-text pull-right">
                                     <h5>Swiffer</h5>
                                     <p>Montreal Moving Day social media creative.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-sm-6">
-                    <a href="#!">
-                        <span class="outer">
+        </div>
+        </span>
+        </a>
+    </div>
+    <div class="col-sm-6">
+        <a href="#!">
+            <span class="outer">
                             <div class="inner portfolio-upa"></div>
                             <div class="portfolio-text top no-gradient text-light">
                                 <span class="logo pull-left upa-logo"></span>
-                                <span class="logo-text pull-right">
+            <span class="logo-text pull-right">
                                     <h5>L'Union des producteurs agricoles</h5>
                                     <p>Illustration made for the UPA which was made into a TV commercial.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
-                </div>
-            </div>            
-            <div class="row">
-                <div class="col-sm-6">
-                    <a href="#!">
-                        <span class="outer">
+    </div>
+    </span>
+    </a>
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <a href="#!">
+                <span class="outer">
                             <div class="inner portfolio-travel-smart"></div>
                             <div class="portfolio-text bottom text-light">
                                 <div class="travel-smart-logo"></div>
                                 <span class="logo pull-left canada-logo"></span>
-                                <span class="pull-left">
+                <span class="pull-left">
                                     <h5>Travel Smart</h5>
                                     <p>Visual and user experience design for Global Affairs Canada’s Travel Smart app.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-sm-6">
-                    <a href="#!">
-                        <span class="outer">
+        </div>
+        </span>
+        </a>
+    </div>
+    <div class="col-sm-6">
+        <a href="#!">
+            <span class="outer">
                             <div class="inner portfolio-suite88"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
                                 <span class="logo pull-right suite88-logo"></span>
-                                <span class="logo-text pull-left">
+            <span class="logo-text pull-left">
                                     <h5>Suite 88</h5>
                                     <p>Illustration designed for Suite 88 limited edition chocolate packaging.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <a href="#!">
-                        <span class="outer">
+    </div>
+    </span>
+    </a>
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <a href="#!">
+                <span class="outer">
                             <div class="inner portfolio-otis"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
                                 <span class="logo pull-left otis-logo"></span>
-                                <span class="logo-text pull-right">
+                <span class="logo-text pull-right">
                                     <h5 class="text-blue-otis">Otis Elevator</h5>
                                     <p>Animated GIF for an Otis Canada Holiday Greeting.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-sm-6">
-                    <a href="#!">
-                        <span class="outer">
+        </div>
+        </span>
+        </a>
+    </div>
+    <div class="col-sm-6">
+        <a href="#!">
+            <span class="outer">
                             <div class="inner portfolio-innovation-space"></div>
                             <div class="portfolio-text top text-light">
                                 <span class="logo pull-left canada-logo"></span>
-                                <span class="logo-text pull-right">
+            <span class="logo-text pull-right">
                                     <h5>Innovation Space</h5>
                                     <p>Illustrations created for the new Innovation Room walls at Global Affairs Canada.</p>
                                 </span>
-                            </div>
-                        </span>
-                    </a>
-                </div>
-            </div>                
-        </section>
-        
-        <!-- Brand identity section -->
+    </div>
+    </span>
+    </a>
+    </div>
+    </div>
+    </section>
 
-        <section class="portfolio">
-            <div class="row">
-                <div class="container">
-                    <h3>Brand identity projects</h3>
-                    <h4>A selection of brand identities designed by Loogart for various clients in different industries. </h4>
-                    <div class="scroll">
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                        <a href="#!"><img class="carousel-brands" src=""></a>
-                    </div>
-                    <h5><a href="#!">View all brand projects</a></h5>
-                </div>
-            </div>
-        </section>        
-        
-        <!-- Web design section -->
+    <!-- Brand identity section -->
 
-        <section class="portfolio">
-            <div class="row">
-                <div class="container">
-                    <h3>Web design projects</h3>
-                    <h4>A selection of websites made with love by Loogart for several clients in different industries.</h4>
-                    <div class="scroll">
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                        <a href="#!"><img class="carousel-web-design" src=""></a>
-                    </div>
-                    <h5><a href="#!">View all web projects</a></h5>
+    <section class="portfolio">
+        <div class="row">
+            <div class="container">
+                <h3>Brand identity projects</h3>
+                <h4>A selection of brand identities designed by Loogart for various clients in different industries. </h4>
+                <div class="scroll">
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
+                    <a href="#!"><img class="carousel-brands" src=""></a>
                 </div>
+                <h5><a href="#!">View all brand projects</a></h5>
             </div>
-        </section>          
+        </div>
+    </section>
+
+    <!-- Web design section -->
+
+    <section class="portfolio">
+        <div class="row">
+            <div class="container">
+                <h3>Web design projects</h3>
+                <h4>A selection of websites made with love by Loogart for several clients in different industries.</h4>
+                <div class="scroll">
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                    <a href="#!"><img class="carousel-web-design" src=""></a>
+                </div>
+                <h5><a href="#!">View all web projects</a></h5>
+            </div>
+        </div>
+    </section>
 
     </div>
     <!-- /container -->
@@ -320,14 +319,24 @@
                     </ul>
                 </div>
                 <div class="col-sm-4">
-                    <h5>Loog a day</h5>
-                    <p>Be the first to see the next Loog of the Day via email.</p>
-                    <div class="input-group">
-                        <input type="text" class="form-control on-dark" placeholder="Your email">
-                        <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">Subscribe</button>
-                        </span>
-                    </div>
+                    <!-- Begin MailChimp Signup Form -->
+                    <form action="//loogart.us7.list-manage.com/subscribe/post?u=318cbb07c865a88e681d7e59d&amp;id=e18344cbf9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <h5>Loog a day</h5>
+                            <p>Be the first to see the next Loog of the Day via email.</p>
+                            <div class="input-group">
+                                <input class="form-control on-dark" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                    <input type="text" name="b_318cbb07c865a88e681d7e59d_e18344cbf9" tabindex="-1" value="">
+                                </div>
+                                <span class="input-group-btn">
+                                    <!--<button class="btn btn-default" type="button">Subscribe</button>-->
+                                    <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">Subscribe</button>
+                                </span>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
