--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h1 class="hidden">Loogart: Montreal visual design studio for illustration, brand identity and web design</h1>
                 <h2>Loogart is a Montreal-based visual design studio that specializes in illustration, brand identity, small-scale animation and web design.</h2>
                 <p class="cta-jumbotron">
-                    <a class="btn btn-lg btn-pink" href="./" role="button">email us</a>
+                    <a class="btn btn-lg btn-pink" href="contact.html" role="button">email us</a>
                 </p>
             </div>
         </div>
@@ -315,7 +315,7 @@
                     <ul class="list-unstyled">
                         <li><a href="http://facebook.com/loogart">Facebook</a></li>
                         <li><a href="http://instagram.com/loogart">Instagram</a></li>
-                        <li><a href="#!">Email us</a></li>
+                        <li><a href="contact.html">Email us</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
