--- a/portraits-loog-a-day.html
+++ b/portraits-loog-a-day.html
@@ -191,7 +191,7 @@
                     <ul class="list-unstyled">
                         <li><a href="http://facebook.com/loogart">Facebook</a></li>
                         <li><a href="http://instagram.com/loogart">Instagram</a></li>
-                        <li><a href="#!">Email us</a></li>
+                        <li><a href="contact.html">Email us</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
