tried different things with php form

--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,7 @@
                 <div class="form-group">
                     <label for="contact-email">Email</label>
                     <input type="email" class="form-control" id="contact-email" type="email" name="contact-email" placeholder="you@email.com">
+                    <?php echo $emptyname?>
                 </div>
 
                 <div class="form-group">
