--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                     <h3 class="modal-title" id="myModalLabel">Mmmh...</h3>
                 </div>
                 <div class="modal-body">
-                    Did you properly type your email address? Did you will out all 3 fields?
+                    Did you properly type your email address? Did you fill out all 3 fields?
                 </div>
                 <div class="modal-footer">
                     <a type="button" class="btn btn-default btn-wide" data-dismiss="modal">Try again</a>
