--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             <div id="navbar" class="navbar-collapse collapse">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="about.html">about</a></li>
+                    <li><a href="about.html">about</a></li>
                     <li><a href="#!" data-toggle="modal" data-target="#errorPopup">shop</a></li>
                     <li><a href="https://www.instagram.com/loogart/">ig</a></li>
                     <li><a href="https://www.facebook.com/LoogArt/">fb</a></li>
