fixed (finally) the code for the contact form via php.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="about.html">about</a></li>
-                    <li><a href="#!" data-toggle="modal" data-target="#thankyou">shop</a></li>
+                    <li><a href="#!">shop</a></li>
                     <li><a href="https://www.instagram.com/loogart/">ig</a></li>
                     <li><a href="https://www.facebook.com/LoogArt/">fb</a></li>
                 </ul>
