--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="about.html">about</a></li>
-                    <li><a href="#!" data-toggle="modal" data-target="#errorPopup">shop</a></li>
+                    <li><a href="#!">shop</a></li>
                     <li><a href="https://www.instagram.com/loogart/">ig</a></li>
                     <li><a href="https://www.facebook.com/LoogArt/">fb</a></li>
                 </ul>
@@ -87,18 +87,18 @@
             <form action="php/contactform.php" id="contact_form" method="post">
 
                 <div class="form-group">
-                    <label for="contact-email">Email</label>
-                    <input type="email" class="form-control" id="contact-email" type="email" name="email" placeholder="you@email.com">
+                    <label for="name">Name</label>
+                    <input class="form-control" type="text" name="first_name" placeholder="First Name and last names" >
+                </div>
+                               
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" type="email" name="email" placeholder="you@email.com">
                 </div>
 
                 <div class="form-group">
-                    <label for="contact-name">Name</label>
-                    <input class="form-control" id="contact-name" type="text" name="first_name" placeholder="First Name and last names">
-                </div>
-
-                <div class="form-group">
-                    <label for="contact-message">Message</label>
-                    <textarea class="form-control" rows="4" id="contact-message" name="comment" placeholder="Your message"></textarea>
+                    <label for="message">Message</label>
+                    <textarea class="form-control" rows="4" placeholder="Your message" name="comment"></textarea>
                 </div>
                 <div class="form-group">
                     <button type="submit" name="action" class="btn btn-pink btn-block"><i class="fa fa-envelope-o" aria-hidden="true"></i> Send your message</button>
