updated clients section about

--- a/about.html
+++ b/about.html
@@ -73,34 +73,79 @@
     <!-- Clients section -->
     <section class="clients">
         <div class="container">
-            <h3>I have worked with...</h3>
-            <ul class="col-sm-6 list-unstyled">
-                <li>Starbucks</li>
-                <li>car2go</li>
-                <li>Ecole de technologie superieure</li>
-                <li>Swiffer</li>
-                <li>Union des producteurs agricoles</li>
-                <li>Global Affairs Canada</li>
-                <li>Otis Elevator</li>
-                <li>Suite 88 Chocolatier</li>
-                <li>BBDO</li>
-                <li>Croix Rouge</li>
-                <li>Dagwoods</li>
+            <h3>I work with awesome people.</h3>
+            <p>I love working with clients on all sorts of challenging projects for illusration, branding, web design and small-scale animation. We ultimately look to do one thing: communicate through visual design.</p>
+
+            <ul class="list-inline list-logos">
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo starbucks-logo"></span>
+                    <h6>Starbucks</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo car2go-logo"></span>
+                    <h6>car2go</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo ets-logo"></span>
+                    <h6>ÉTS</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo swiffer-logo"></span>
+                    <h6>Swiffer</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo upa-logo-2"></span>
+                    <h6>L'UPA</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo canada-logo-2"></span>
+                    <h6>Global Affairs Canada</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo otis-logo-2"></span>
+                    <h6>Otis Elevator</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo suite88-logo"></span>
+                    <h6>Suite 88 Chocolatier</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo bbdo-logo"></span>
+                    <h6>BBDO</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo redcross-logo"></span>
+                    <h6>Red Cross</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo dagwoods-logo"></span>
+                    <h6>Dagwoods</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo citizenrelations-logo"></span>
+                    <h6>Citizen Relations</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo mtlblog-logo"></span>
+                    <h6>MTL Blog</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-station16"></span>
+                    <h6>Station 16 Gallery</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo mariouomo-logo"></span>
+                    <h6>Mario Uomo</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo tweetaide-logo"></span>
+                    <h6>Tweetaide</h6>
+                </li>
+                <!--<li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo fortnine-logo"></span>
+                    <h6>Fortnine</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo btsm-logo"></span>
+                    <h6>Black Tiger Sex Machine</h6>
+                </li>-->
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo kevric-logo"></span>
+                    <h6>Kevric</h6>
+                </li>
+                <!--<li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo springboard-logo"></span>
+                    <h6>Springboard</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-nutritionr"></span>
+                    <h6>Nutritionr</h6>
+                </li>-->
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-kalooba"></span>
+                    <h6>Kalooba</h6>
+                </li>
+
+
             </ul>
-            <ul class="col-sm-6 list-unstyled">
-                <li>Citizen Relations</li>
-                <li>Montreall.com</li>
-                <li>Mario Uomo</li>
-                <li>Nutritionr</li>
-                <li>Tweetaide</li>
-                <li>Kalooba</li>
-                <li>Canada’s Motorcycle (Fortnine)</li>
-                <li>Kevric</li>
-                <li>MTL Blog</li>
-                <li>Black Tiger Sex Machine</li>
-                <li>Springboard</li>
-            </ul>
-            <p>I love every single one of my clients and the design challenges they present me with. Looking to work with Loogart?</p>
 
             <p class="cta-jumbotron">
                 <a class="btn btn-lg btn-pink" href="contact.html" role="button">Work with Loogart</a>
