--- a/projects/montreal-cityline-illustration.html
+++ b/projects/montreal-cityline-illustration.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Illustrations of Montreal City, Quebec City and Quebe Province cityscapes for opening stores in Quebec. Design by Loogart and art-direction by BBDO.">
+    <meta name="description" content="Illustration of Montreal's Cityscape by Loogart. Created by Loogart for various cities - coined as a CityLine - such as Toronto, Ottawa, Zurich, New York, Los Angeles, Canada.">
     <meta name="author" content="Chris Soueidan of Loogart">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starbucks Opening Stores Cityscape Illustrations | Loogart</title>
+    <title>Montreal CityLine Illustration | Loogart</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
@@ -52,7 +52,10 @@
     </nav>
 
     <!-- champion image -->
-    <div id="pic1" class="project-jumbotron project-starbucks-img"></div>
+    <div id="pic1" class="project-jumbotron project-montreal-img">
+
+
+    </div>
 
 
     <div class="container">
@@ -64,7 +67,7 @@
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
-                <h1>Starbucks Opening Stores by Loogart</h1>
+                <h1>Montréal CityLine Illustration</h1>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
             </div>
         </div>
@@ -77,26 +80,26 @@
             <div class="row">
 
                 <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/starbucks_logo.png" style="width:200px">
-                    <h3>Company Logo</h3>
+                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
+                    <h3>Title Half</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
                 </div>
                 <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-coffee-beans-photography.jpg" data-action="zoom">
-                    <h3>Graphic texture behind illustration</h3>
+                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
+                    <h3>Title Half</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
                 </div>
                 <div class="col-sm-12">
-                    <h3>Cityscape illustrations created by Loogart</h3>
+                    <h3>Title Full</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum repellendus similique quidem eaque voluptas, aut velit excepturi. Unde rerum, quod quis iure ex, cum voluptas fuga consequuntur minima quisquam voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi minima fuga, voluptas nobis nostrum pariatur hic, placeat reprehenderit dolorem culpa, mollitia vero tempora inventore quod laboriosam quidem odio deserunt reiciendis.</p>
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-artwork-montreal-city-by-loogart.jpg" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-artwork-quebec-city-by-loogart.jpg" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-artwork-quebec-province-by-loogart.jpg" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
                 </div>
                 <div class="col-sm-12">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel totam labore, magni optio amet illo corporis sequi unde. Ex dicta, mollitia temporibus officia exercitationem! Blanditiis quos iusto dicta et.</p>
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-artwork-opening-stores.jpg" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
                 </div>
                 <div class="col-sm-12">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
@@ -113,19 +116,17 @@
         <section class="portfolio-content">
             <div class="row">
                 <div class="container">
-                    <h3>Scroller for images</h3>
+                    <h3>Photography of final project</h3>
                     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa itaque ipsum velit quam officiis repudiandae molestiae, laborum voluptatibus tenetur, reiciendis, neque iure possimus perspiciatis obcaecati consectetur facere. Distinctio, provident!</h4>
                     <div class="scroll">
-                        <img class="img-portfolio-scroller" src="../img/starbucks_door.JPG">
-                        <img class="img-portfolio-scroller" src="../img/starbucks_door2.JPG">
-                        <img class="img-portfolio-scroller" src="../img/starbucks_door3.JPG">
-                        <img class="img-portfolio-scroller" src="../img/starbucks-billboard.jpg">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
+                        <img class="img-portfolio-scroller" src="../img/">
+                        <img class="img-portfolio-scroller" src="../img/">
+                        <img class="img-portfolio-scroller" src="../img/">
+                        <img class="img-portfolio-scroller" src="../img/">
+                        <img class="img-portfolio-scroller" src="../img/">
+                        <img class="img-portfolio-scroller" src="../img/">
+                        <img class="img-portfolio-scroller" src="../img/">
+                        <img class="img-portfolio-scroller" src="../img/">
                     </div>
                 </div>
             </div>
