fixed logo placement about

--- a/about.html
+++ b/about.html
@@ -98,18 +98,16 @@
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo otis-logo-2"></span>
                     <h6>Otis Elevator</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo suite88-logo"></span>
-                    <h6>Suite 88 Chocolatier</h6>
-                </li>
+
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo bbdo-logo"></span>
                     <h6>BBDO</h6>
                 </li>
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo redcross-logo"></span>
                     <h6>Red Cross</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo dagwoods-logo"></span>
+                <!--<li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo dagwoods-logo"></span>
                     <h6>Dagwoods</h6>
-                </li>
+                </li>-->
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo citizenrelations-logo"></span>
                     <h6>Citizen Relations</h6>
                 </li>
@@ -118,6 +116,9 @@
                 </li>
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-station16"></span>
                     <h6>Station 16 Gallery</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo suite88-logo"></span>
+                    <h6>Suite 88 Chocolatier</h6>
                 </li>
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo mariouomo-logo"></span>
                     <h6>Mario Uomo</h6>
@@ -143,8 +144,6 @@
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-kalooba"></span>
                     <h6>Kalooba</h6>
                 </li>
-
-
             </ul>
 
             <p class="cta-jumbotron">
